--- a/package.json
+++ b/package.json
@@ -6,24 +6,36 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx src || true",
+    "type-check": "tsc --noEmit",
+    "audit": "npm audit --audit-level=moderate || true"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Egyptiancuckold/egyptian-cuckold-site.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Egyptiancuckold/egyptian-cuckold-site/issues"
+  },
+  "homepage": "https://github.com/Egyptiancuckold/egyptian-cuckold-site#readme",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wouter": "^3.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "eslint": "^8.44.0"
   }
 }
