--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,25 +2,19 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOMA"],
+    "lib": ["ES2020", "DOM"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-
-    /* Path Aliases */
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
@@ -29,6 +23,6 @@
       "@pages/*": ["src/pages/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "public/**/*", "*.html"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
