--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,9 @@
+[build.environment]
+  NPM_FLAGS = "--version"
+  NODE_VERSION = "18"
+
 [build]
-  command = "npm run build"
+  command = "npm install -g pnpm && pnpm install && pnpm run build"
   publish = "dist"
 
 [[redirects]]
