--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   NODE_VERSION = "18"
 
 [build]
-  command = "npm install -g pnpm && pnpm install && pnpm run build"
+  command = "npm install -g pnpm && pnpm install --no-frozen-lockfile && pnpm run build"
   publish = "dist"
 
 [[redirects]]
