--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,8 @@
 [build.environment]
-  NPM_FLAGS = "--version"
   NODE_VERSION = "18"
 
 [build]
-  command = "npm install -g pnpm && pnpm install --no-frozen-lockfile && pnpm run build"
+  command = "pnpm install && pnpm run build"
   publish = "dist"
 
 [[redirects]]
