--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,14 @@
 [build.environment]
   NODE_VERSION = "18"
-
 [build]
   command = "pnpm install && pnpm run build"
   publish = "dist"
+
+[[redirects]]
+  from = "/admin/*"
+  to = "/admin/:splat"
+  status = 200
+  force = true
 
 [[redirects]]
   from = "/*"
