--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,5 @@
-[build.environment]
-  NODE_VERSION = "18"
 [build]
-  command = "pnpm install && pnpm run build"
-  publish = "dist"
+  publish = "public"
 
 [[redirects]]
   from = "/admin/*"
