--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,11 +1,9 @@
 backend:
-  name: github
+  name: git-gateway
   repo: Egyptiancuckold/egyptian-cuckold-site # اسم المستودع الخاص بك
   branch: main # اسم الفرع الرئيسي
-
 media_folder: "public/assets/uploads" # المجلد الذي سيتم رفع الصور إليه
 public_folder: "/assets/uploads" # المسار العام للصور
-
 collections:
   - name: "pages"
     label: "الصفحات الرئيسية"
@@ -18,4 +16,3 @@ collections:
           - {label: "وصف الموقع", name: "APP_DESCRIPTION", widget: "string"}
           - {label: "محتوى الترحيب", name: "WELCOME_MESSAGE", widget: "markdown"}
           - {label: "صورة الغلاف (اختياري)", name: "COVER_IMAGE", widget: "image", required: false}
-
