--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Egyptiancuckold/egyptian-cuckold-site#readme",
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wouter": "^3.0.0"
@@ -35,8 +36,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "eslint": "^8.44.0"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11"
   }
 }
