--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "wouter": "^3.0.0"
   },
   "devDependencies": {
+    "@netlify/functions": "^2.8.0",
     "@types/gray-matter": "^4.0.3",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
