--- a/public/config.yml
+++ b/public/config.yml
@@ -2,8 +2,14 @@ backend:
   name: github
   repo: Egyptian-Cuckold/egyptian-cuckold-site
   branch: main
+  base_url: "https://gatekeeper-cms.vercel.app"
+  auth_endpoint: "/auth"
+  token_endpoint: "/auth"
+  client_id: "Ov23liKHeQWybzRdPx3N"
+
 media_folder: "public/assets/uploads"
 public_folder: "/assets/uploads"
+
 collections:
   # 🎯 إعدادات الموقع
   - name: "settings"
@@ -19,6 +25,7 @@ collections:
           - {label: "🖼️ صورة الغلاف", name: "COVER_IMAGE", widget: "image", required: false}
           - {label: "📧 البريد الإلكتروني", name: "CONTACT_EMAIL", widget: "string", required: false}
           - {label: "🔗 رابط تليجرام", name: "TELEGRAM_LINK", widget: "string", required: false}
+
   # 🎯 التحديات
   - name: "challenges"
     label: "🎯 التحديات"
@@ -34,59 +41,3 @@ collections:
       - {label: "🖼️ صورة التحدي", name: "image", widget: "image", required: false}
       - {label: "📅 تاريخ النشر", name: "date", widget: "datetime"}
       - {label: "🏷️ الوسوم", name: "tags", widget: "list", required: false}
-  # 📸 الصور
-  - name: "images"
-    label: "📸 الصور"
-    folder: "content/images"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    fields:
-      - {label: "📌 عنوان الصورة", name: "title", widget: "string"}
-      - {label: "📝 الوصف", name: "description", widget: "text"}
-      - {label: "🖼️ الصورة", name: "image", widget: "image"}
-      - {label: "🏷️ الفئة", name: "category", widget: "select", options: ["صورة تحدي", "صورة ساخنة", "صورة شخصية", "أخرى"]}
-      - {label: "📅 تاريخ الرفع", name: "date", widget: "datetime"}
-      - {label: "⚠️ محتوى حساس؟", name: "nsfw", widget: "boolean", default: true}
-      - {label: "🏷️ الوسوم", name: "tags", widget: "list", required: false}
-  # 🎥 الفيديوهات
-  - name: "videos"
-    label: "🎥 الفيديوهات"
-    folder: "content/videos"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    fields:
-      - {label: "📌 عنوان الفيديو", name: "title", widget: "string"}
-      - {label: "📝 الوصف", name: "description", widget: "text"}
-      - {label: "📤 رفع ملف فيديو", name: "videoFile", widget: "file", required: false}
-      - {label: "🔗 رابط الفيديو (خارجي)", name: "videoUrl", widget: "string", required: false}
-      - {label: "🖼️ صورة مصغرة", name: "thumbnail", widget: "image", required: false}
-      - {label: "🏷️ نوع الفيديو", name: "category", widget: "select", options: ["فيديو تحدي", "فيديو تعليمي", "فيديو ساخن", "أخرى"]}
-      - {label: "⏱️ مدة الفيديو (MM:SS)", name: "duration", widget: "string", pattern: ['^([0-5]?[0-9]):([0-5][0-9])$', 'الرجاء إدخال الوقت بصيغة MM:SS (مثال: 00:45)'], required: false}
-      - {label: "📅 تاريخ النشر", name: "date", widget: "datetime"}
-      - {label: "⚠️ محتوى للكبار؟", name: "nsfw", widget: "boolean", default: true}
-      - {label: "🏷️ الوسوم", name: "tags", widget: "list", required: false}
-  # 📄 الصفحات
-  - name: "pages"
-    label: "📄 الصفحات الثابتة"
-    folder: "content/pages"
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - {label: "📌 عنوان الصفحة", name: "title", widget: "string"}
-      - {label: "🔗 الرابط المختصر", name: "slug", widget: "string"}
-      - {label: "✍️ محتوى الصفحة", name: "body", widget: "markdown"}
-      - {label: "📅 تاريخ الإنشاء", name: "date", widget: "datetime"}
-      - {label: "🖼️ صورة الصفحة", name: "image", widget: "image", required: false}
-  # 📢 الإعلانات
-  - name: "announcements"
-    label: "📢 الإعلانات"
-    folder: "content/announcements"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    fields:
-      - {label: "📌 عنوان الإعلان", name: "title", widget: "string"}
-      - {label: "✍️ نص الإعلان", name: "body", widget: "markdown"}
-      - {label: "🎨 نوع الإعلان", name: "type", widget: "select", options: ["info", "warning", "success", "danger"]}
-      - {label: "📅 تاريخ البداية", name: "startDate", widget: "datetime"}
-      - {label: "📅 تاريخ الانتهاء", name: "endDate", widget: "datetime", required: false}
-      - {label: "✅ نشط؟", name: "active", widget: "boolean", default: true}
